{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 41,
  "lineage": "b58e259c-d430-58e1-2d5b-cd042df21a50",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:940657260141:internet-gateway/igw-0275e01f8dfbf6a77",
            "id": "igw-0275e01f8dfbf6a77",
            "owner_id": "940657260141",
            "tags": {
              "Name": "LU-IGW"
            },
            "tags_all": {
              "Name": "LU-IGW"
            },
            "vpc_id": "vpc-01a2b2ec0e82a4ce2"
          },
          "dependencies": [
            "aws_vpc.lu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:940657260141:route-table/rtb-021a8ee40e8fbc1c0",
            "id": "rtb-021a8ee40e8fbc1c0",
            "owner_id": "940657260141",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0275e01f8dfbf6a77",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT for Subnet"
            },
            "tags_all": {
              "Name": "RT for Subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a2b2ec0e82a4ce2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.lu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "first",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084e77597315cfcc1",
            "route_table_id": "rtb-021a8ee40e8fbc1c0",
            "subnet_id": "subnet-01c4cd7add896bb30"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.web_rt",
            "aws_subnet.database_subnet_1",
            "aws_vpc.lu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "second",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c315831639dcf6c",
            "route_table_id": "rtb-021a8ee40e8fbc1c0",
            "subnet_id": "subnet-0834f9eafca2819b0"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.web_rt",
            "aws_subnet.database_subnet_2",
            "aws_vpc.lu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:940657260141:security-group/sg-0356a4d21e8d45de9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0356a4d21e8d45de9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db",
            "name_prefix": "",
            "owner_id": "940657260141",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DB SG"
            },
            "tags_all": {
              "Name": "DB SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a2b2ec0e82a4ce2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:940657260141:subnet/subnet-01c4cd7add896bb30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c4cd7add896bb30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "940657260141",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Database 1"
            },
            "tags_all": {
              "Name": "Database 1"
            },
            "vpc_id": "vpc-01a2b2ec0e82a4ce2"
          },
          "dependencies": [
            "aws_vpc.lu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:940657260141:subnet/subnet-0834f9eafca2819b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0834f9eafca2819b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "940657260141",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Database-2b"
            },
            "tags_all": {
              "Name": "Database-2b"
            },
            "vpc_id": "vpc-01a2b2ec0e82a4ce2"
          },
          "dependencies": [
            "aws_vpc.lu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lu_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:940657260141:vpc/vpc-01a2b2ec0e82a4ce2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09d6d7d3a15b07abe",
            "default_route_table_id": "rtb-08b3ed6e9ba4d4690",
            "default_security_group_id": "sg-03f74e45bd50110cf",
            "dhcp_options_id": "dopt-04e197dadd756efce",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01a2b2ec0e82a4ce2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08b3ed6e9ba4d4690",
            "owner_id": "940657260141",
            "tags": {
              "Name": "LUIT VPC"
            },
            "tags_all": {
              "Name": "LUIT VPC"
            }
          }
        }
      ]
    }
  ]
}